DevOps/K8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primenest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: primenest
  template:
    metadata:
      labels:
        app: primenest
    spec:
      containers:
      - name: primenest
        image: redasaad123/primnest:latest
        ports:
        - containerPort: 8000

    volumes:
      - name: app-storage
      #   persistentVolumeClaim:
      #     claimName: primenest-pvc
        hostPath:
          path: /home/ubuntu/PrimeNest/uploads
          type: DirectoryorCreate
