DevOps/K8s/Services.yml
apiVersion: v1
kind: Service
metadata:
  name: primenest-service
spec:
  selector:
    app: primenest
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
