DevOps/K8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: primenest-ingress
  annotations:
    
    nginx.ingress.kubernetes.io/use-regex: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  rules:
  - host: primenest.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: primenest-service
            port:
              number: 8000
  tls:
  - hosts:
    - primenest.duckdns.org
    secretName: prime-nest-tls
